--- a/public/static/dev/scss/global.scss
+++ b/public/static/dev/scss/global.scss
@@ -12,6 +12,7 @@
 @import 'components/code.scss';
 @import 'components/highlight.scss';
 @import 'components/lists.scss';
+@import 'components/messages.scss';
 // print
 @import 'global/print.scss';
 
