--- a/public/static/dev/scss/global/_variables.scss
+++ b/public/static/dev/scss/global/_variables.scss
@@ -13,4 +13,4 @@ $spacing-unit-mini: 6px;
 
 $base-font-size: 16;
 
-$heading-font-family: 'Advent Pro', sans-serif;
+$heading-font-family: sans-serif;
