--- a/public/static/dev/scss/components/_typography.scss
+++ b/public/static/dev/scss/components/_typography.scss
@@ -9,16 +9,16 @@ h1, .a {
     @include font-size(2.4);
     line-height:1.2;
     margin: 0 0 $spacing-unit-mini 0;
-    font-weight: normal;
+    font-weight: lighter;
     text-transform: none;
-    font-family: 'Advent Pro', sans-serif;
+    font-family: $heading-font-family;
 }
 h2, .b {
     @include font-size(1.5);
     line-height:1.2;
     margin: 0 0 $spacing-unit-mini 0;
-    font-weight: normal;
-    font-family: 'Advent Pro', sans-serif;
+    font-weight: lighter;
+    font-family: $heading-font-family;
     text-transform: uppercase;
 }
 h3, .c {
@@ -26,7 +26,7 @@ h3, .c {
     line-height:1.2;
     margin: 0 0 $spacing-unit-mini 0;
     font-weight: normal;
-    font-family: 'Advent Pro', sans-serif;
+    font-family: $heading-font-family;
     text-transform: none;
 }
 h4, .d {
