--- a/public/static/dev/scss/components/_typography.scss
+++ b/public/static/dev/scss/components/_typography.scss
@@ -58,6 +58,9 @@ p {
     max-width: 768px;
     max-width: 48rem;
 }
+.text--right {
+    text-align: right;
+}
 .text--center {
     text-align: center;
 }
