--- a/public/static/dev/scss/global.scss
+++ b/public/static/dev/scss/global.scss
@@ -5,6 +5,9 @@
 @import 'global/variables.scss';
 @import 'global/mixins.scss';
 
+
+@import 'fontawesome/all.scss';
+
 // components
 @import 'components/base.scss';
 @import 'components/typography.scss';
@@ -13,9 +16,7 @@
 @import 'components/highlight.scss';
 @import 'components/lists.scss';
 @import 'components/messages.scss';
+@import 'components/header.scss';
+@import 'components/footer.scss';
 // print
 @import 'global/print.scss';
-
-body {
-    padding: 40px;
-}
