removing composer and tweaking setup files for init setup on Toms machine.

--- a/webroot/public/static/dev/scss/global.scss
+++ b/webroot/public/static/dev/scss/global.scss
@@ -21,5 +21,8 @@
 @import 'components/messages.scss';
 @import 'components/header.scss';
 @import 'components/footer.scss';
+
 // print
 @import 'global/print.scss';
+
+/* test */
