changing link colour to pink as a test for commit and AWS

--- a/webroot/public/static/dev/scss/global/_variables.scss
+++ b/webroot/public/static/dev/scss/global/_variables.scss
@@ -4,7 +4,7 @@ $html-textcolor: #fff;
 $body-color: #fff;
 $text-color: #334;
 
-$link-color: #1678f7;
+$link-color: #f966c8;
 $link-visited: #1563c8;
 
 $highlight-color: #CDD1B6;
