--- a/webroot/public/static/dev/scss/components/_footer.scss
+++ b/webroot/public/static/dev/scss/components/_footer.scss
@@ -1,4 +1,17 @@
 .footer {
     background: $html-color;
     color: $html-textcolor;
+    padding-top: $spacing-unit-half;
+}
+
+.legal li {
+	display: inline;
+}
+
+.copyright {
+	float:left;
+}
+
+.legal {
+	float:right;
 }
