--- a/webroot/public/static/dev/scss/global/_variables.scss
+++ b/webroot/public/static/dev/scss/global/_variables.scss
@@ -1,10 +1,10 @@
-$html-color: #222622;
+$html-color: #000;
 $html-textcolor: #fff;
 
 $body-color: #fff;
 $text-color: #334;
 
-$link-color: #f966c8;
+$link-color: #999;
 $link-visited: #1563c8;
 
 $highlight-color: #CDD1B6;
@@ -16,4 +16,4 @@ $spacing-unit-mini: 6px;
 
 $base-font-size: 16;
 
-$heading-font-family: sans-serif;
+$heading-font-family: 'Roboto', sans-serif;
