Adding the start of the company profile page. Items include description, twitter, address, email, website and telephone number. Added placeholder actions for join and recommend.

--- a/webroot/public/static/dev/scss/components/_grid.scss
+++ b/webroot/public/static/dev/scss/components/_grid.scss
@@ -18,6 +18,7 @@
 }
 .g {
     padding-left: $spacing-unit;
+    padding-bottom: $spacing-unit;
     display: inline-block;
     vertical-align: top;
     width: 100%;
