--- a/webroot/public/static/dev/scss/global.scss
+++ b/webroot/public/static/dev/scss/global.scss
@@ -13,6 +13,8 @@
 @import 'components/typography.scss';
 @import 'components/grid.scss';
 
+@import 'components/company.scss';
+
 @import 'components/buttons.scss';
 @import 'components/code.scss';
 @import 'components/highlight.scss';
