--- a/webroot/public/static/dev/scss/components/_grid.scss
+++ b/webroot/public/static/dev/scss/components/_grid.scss
@@ -17,8 +17,6 @@
   clear: both;
 }
 .g {
-    padding-left: $spacing-unit;
-    padding-bottom: $spacing-unit;
     display: inline-block;
     vertical-align: top;
     width: 100%;
@@ -74,6 +72,10 @@
 }
 
 @media all and (min-width: pxtoem(976)) { /* 976px */
+  body {
+    width: 976px;
+    margin:0 auto;
+  }
   .g-xl-1-1 { width: 100%;}
   .g-xl-1-2 { width: 50%;}
   .g-xl-1-3 { width: 33.33333333333333%;}
