editing company profile layout for use with grid structure.

--- a/webroot/public/static/dev/scss/components/_grid.scss
+++ b/webroot/public/static/dev/scss/components/_grid.scss
@@ -22,6 +22,7 @@
     width: 100%;
     letter-spacing: normal;
     word-spacing: normal;
+    padding-top: $spacing-unit;
 }
 .g-1-1 { width: 100%;}
 .g-1-2 { width: 50%;}
