--- a/webroot/public/static/dev/scss/components/_company.scss
+++ b/webroot/public/static/dev/scss/components/_company.scss
@@ -1,13 +1,9 @@
-img {
-	width: 100%;
+.contact p {
+	padding: 0;
+	margin: 0;
 }
 
-.company .details p {
-	padding:0;
-	margin:0;
-}
-
-.company .details .description {
+.details .description {
 	padding:0;
 	margin:0 0 $spacing-unit-half 0;
 }
