fleshing out what a company page looks like

--- a/webroot/public/static/dev/scss/components/_buttons.scss
+++ b/webroot/public/static/dev/scss/components/_buttons.scss
@@ -1,6 +1,8 @@
 .btn {
-  background: #ccc;
+  background: $html-color;
   border: 0;
   border-radius: 2px;
   padding: 6px;
+  text-decoration: none;
+  color: $html-textcolor;
 }
