--- a/webroot/public/static/dev/scss/components/_grid.scss
+++ b/webroot/public/static/dev/scss/components/_grid.scss
@@ -5,6 +5,7 @@
     letter-spacing: -0.31em; /* webkit */
     *letter-spacing: normal; /* reset IE < 8 */
     word-spacing: -0.43em; /* IE < 8 && gecko */
+    margin-bottom: $spacing-unit;
 }
 .grid:before,
 .grid:after {
@@ -73,10 +74,6 @@
 }
 
 @media all and (min-width: pxtoem(976)) { /* 976px */
-  .content {
-    width: 976px;
-    margin:0 auto;
-  }
   .g-xl-1-1 { width: 100%;}
   .g-xl-1-2 { width: 50%;}
   .g-xl-1-3 { width: 33.33333333333333%;}
