--- a/webroot/public/static/dev/scss/components/_company.scss
+++ b/webroot/public/static/dev/scss/components/_company.scss
@@ -72,4 +72,16 @@
 	margin-bottom: $spacing-unit;
 }
 
+.comment {
+	border-top: 1px solid $border-color;
+	margin-top: $spacing-unit;
+	padding-top: $spacing-unit;
+}
+
+.quote {
+	font-size: 2em;
+	line-height: 1.3em;
+}
+
+
 /* @todo - needs refactoring to grid */
