adding project sharing example to company page

--- a/webroot/public/static/dev/scss/components/_company.scss
+++ b/webroot/public/static/dev/scss/components/_company.scss
@@ -83,5 +83,14 @@
 	line-height: 1.3em;
 }
 
+.showcase {
+	margin-bottom: 16px;
+}
+
+.showcase img {
+	width: 30%;
+	margin-right: 8px;
+}
+
 
 /* @todo - needs refactoring to grid */
