--- a/webroot/public/static/dev/scss/components/_company.scss
+++ b/webroot/public/static/dev/scss/components/_company.scss
@@ -1,9 +1,13 @@
-.details p {
+
+/* THESE CLASSES ARE TOO SPECIFIC.
+    CREATE REUSABLE MICRO CSS OBJECTS. */
+
+.details p /* WHAT IF IT'S NOT A <p>. SHOULD BE .details__item */ {
 	padding: 0;
 	margin: 0;
 }
 
-.details .description {
+.details .description /* NO NEED FOR THIS IF THE ONE ABOVE IS USED */ {
 	padding:0;
 	margin:0;
 }
@@ -12,7 +16,7 @@
 	margin-top: $spacing-unit;	
 }
 
-.details .location {
+.details .location /* THIS SHOULD BE HANDLED BY A WRAPPER .component - WHAT IF THERE IS NO LOCATION */ {
 	margin-bottom: $spacing-unit;	
 }
 
